<?xml version="1.0"?>
<package format="2">
  <name>ueye_driver</name>
  <version>0.0.0</version>
  <description>Driver for IDS UEye cameras</description>

  <maintainer email="autonomous-systems@eurecat.org">Eurecat</maintainer>

  <license>Eurecat</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>camera_calibration_parsers</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
